--- a/css/styles.css
+++ b/css/styles.css
@@ -501,6 +501,12 @@ footer ul a {
     width: 300px;
 }
 
+.contenedor-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
 .button-info {
     background-color: #F2F4F3;
     color: #153c50;
@@ -539,6 +545,45 @@ footer ul a {
     flex-direction: column;
 }
 
+.container-linea-form {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    align-items: center;
+}   
+
+.label-nombre {
+    grid-column: 1/3;
+}
+
+.input-nombre {
+    grid-column: 3/8;
+}
+
+.label-residencia {
+    grid-column: 1/3;
+
+}
+.select-residencia {
+    grid-column: 3/8;
+
+}
+
+.label-email {
+    grid-column: 1/3;
+}
+
+.input-email {
+    grid-column: 3/8;
+}
+
+.label-msje {
+    grid-column: 1/3;
+}
+
+.text-msje {
+    grid-column: 3/8;
+}
 
 
 input {
