--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -68,9 +68,9 @@
         grid-row: 10/12;*/
         display: none;
     }
-    .index__nav__a {
+    .nav-index a{ 
         font-size: 1.0rem;
-    }
+    }   
     /*fin reglas especiales index - MOBILE */
 
 
